# submarine_hunter

./: .gitignore  README.md  pyproject.toml
src/submarine_hunter/: ai.py  config.py  game.py  models.py  ui.py
src/submarine_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_logic.py
